--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [["@babel/plugin-proposal-class-properties"]],
     "env": {
         "test": {
             "presets": ["@babel/preset-env", "@babel/preset-react"]
